--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@ body {
       text-align: center;
     }
     hr {
-      width: 25%;
+      width: 20%;
     }
     .sub-title {
       text-align: center;
@@ -63,10 +63,10 @@ body {
     }
 
     .viewer-div {
-      background-color: white;
       flex: 1;
       max-width: 100%;
       height: 100%;
+
       font-family: 'Noto Sans JP', sans-serif;
       
       #preview {
@@ -74,6 +74,8 @@ body {
         border-radius: 4px;
         padding: 0px 20px 10px 20px;
         height: 100%;
+        min-height: 50px;
+        background-color: white;
       }
       
       #preview img { // prevent oversized img from overflowing
